[tool.poetry]
name = "config_wrangler"
version = "1.1.0"
license = "MIT"
authors = ["Derek Wood"]
description = "pydantic based configuration wrangler. Handles reading multiple ini or toml files with inheritance rules and variable expansions."
readme = "README.md"
repository = "https://github.com/arcann/config_wrangler"
documentation = "https://bietl.dev/config_wrangler/"

[tool.poetry.dependencies]
python = ">=3.9, <4.0.0"

pydantic = ">=2.2"
StrEnum = ">=0.4.7"
SQLAlchemy = {version = ">=1.4", optional = true}
boto3 = {version = ">=1.33", optional = true}
cachetools = {version = ">=5.3.1", optional = true}
pykeepass = {version = ">=4.0.0", optional = true}
auto-all = ">=1.4.1"
pydicti = ">=1.1.6"
typing-extensions = ">=4.7.1"

[tool.poetry.extras]
sqlalchemy = ["SQLAlchemy"]
pykeepass = ["pykeepass"]
redshift = ["boto3"]
s3 = ["boto3", "cachetools"]
aws = ["boto3", "cachetools"]

[tool.poetry.group.dev.dependencies]
tox = "^4.6"
# Keep boto3 fairly current to avoid scanning a huge list of versions
boto3 = ">=1.30.0"
keyring = "^23.9.3"
pykeepass = ">4.0.0"
SQLAlchemy = ">=1.4"
toml = ">=0.10.2"
pynamodb = ">=5.5.1"

[tool.poetry.group.dev.dependencies.moto]
# Optional but required for tests so needed for development
version="^5.0.2"
extras=[
    "s3", "dynamodb", "redshift", "ssm", "secretsmanager", "lambda", "sts"
]

[tool.poetry.group.dev.dependencies.boto3-stubs]
version=">=1.30"
extras=[
    "s3", "dynamodb", "redshift", "ssm", "secretsmanager", "lambda", "sts"
]

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
# Required for building docs
Sphinx = "^7.2.6"
sphinx-pydantic = ">=0.1.1"
autodoc-pydantic = ">=2"
sphinx-paramlinks = ">=0.5.4"
toml = ">=0.10.2"
sphinx-autobuild = "^2024.2.4"
sphinx-rtd-theme = "^2.0.0"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
