[project]
name = "config_wrangler"
version = "1.3.3"
description = "pydantic based configuration wrangler. Handles reading multiple ini or toml files with inheritance rules and variable expansions."
authors = [{ name = "Derek Wood" }]
requires-python = ">=3.10, <4.0.0"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "pydantic>=2.0",
    "StrEnum>=0.4.7",
    "auto-all>=1.4.1",
    "pydicti>=1.1.6",
    "typing-extensions>=4.7.1",
]

[project.optional-dependencies]
sqlalchemy = ["SQLAlchemy>=1.4"]
pykeepass = ["pykeepass>=4.0.0"]
redshift = ["boto3>=1.38"]
s3 = [
    "boto3>=1.38",
    "cachetools>=5.3.1",
]
aws = [
    "boto3>=1.38",
    "cachetools>=5.3.1",
]
aws_request_auth = ["requests-aws4auth>=1.2.3"]
toml = ["toml>=0.10.2"]
keyring = ["keyring>=23.9.3"]

[project.urls]
Repository = "https://github.com/arcann/config_wrangler"
Documentation = "https://bietl.dev/config_wrangler/"

[dependency-groups]
dev = [
    "tox>=4.49",
    "tox-uv-bare>=1.29.0",
    "pytest>=8.2",
    "requests-mock>=1.12.1,<2",
    "toml>=0.10.2",
    "moto[s3, dynamodb, redshift, ssm, secretsmanager, sts]>=5.0.2,<6",
    "boto3-stubs[s3, dynamodb, redshift, ssm, secretsmanager, lambda, sts]>=1.30",
]
docs = [
    "Sphinx>=7.2.6,<8",
    "sphinx-pydantic>=0.1.1",
    "autodoc-pydantic>=2",
    "sphinx-paramlinks>=0.5.4",
    "toml>=0.10.2",
    "sphinx-autobuild>=2024.2.4,<2025",
    "sphinx-rtd-theme>=2.0.0,<3",
]

[tool.uv]
default-groups = ["dev"]
exclude-newer = "1 week"

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.10.1,<0.11.0"]
build-backend = "uv_build"
